# DSA_project2

./: CMakeLists.txt  README.md  comparator.cpp  comparator.h  dataloader.cpp  dataloader.h  main.cpp  sorter.cpp  sorter.h  test.cpp
build_tests/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  build.ninja  cmake_install.cmake  sort_comparator_tests-b12d07c_include.cmake  sort_comparator_tests-b12d07c_tests.cmake
build_tests/Testing/Temporary/: CTestCostData.txt
csv/: example.csv
